--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -9,7 +9,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Antonio&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="images/FoodList-Icon.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="images/FoodList-Icon-Black.png" type="image/x-icon">
+    <link rel="apple-touch-icon" href="images/FoodList-Icon-Black.png">
+    <link rel="manifest" href="manifest.json">
+    <script src="https://use.fontawesome.com/b070c8f1df.js"></script>
     <!-- Logo From Logo Maker
     https://spark.adobe.com/express-apps/logomaker/preview
     -->
@@ -18,39 +21,25 @@
     <a href="#maincontent" tabindex="1"class="skip-link">Menuju ke konten</a>
     <header class="header">
         <div class="header__inner">
-            <img src="images/FoodList-logos-Crop.jpeg" alt="FoodList-logos">
-            <p class="">
-                Food & Beverages Here !
-            </p>
+            <img src="images/FoodList-Icon-Black.png" alt="FoodList-logos">
         </div>
         <nav id="drawer" class="nav">
             <ul class="nav__list">
                 <li class="nav__item" >
-                    <a tabindex="3" href="index.html">Home</a>
+                    <a tabindex="1" href="#/home">Home</a>
                 </li>
                 <li class="nav__item" >
-                    <a tabindex="4" href="#">Favorite</a>
+                    <a tabindex="1" href="#/">Favorite</a>
                 </li>
                 <li class="nav__item" >
-                    <a tabindex="5"href="https://github.com/almuhtadiaqil">About us</a>
+                    <a tabindex="1"href="https://github.com/almuhtadiaqil">About us</a>
                 </li>
             </ul>
         </nav>
     </header>
-    <button id="hamburger" aria-label="Menu" tabindex="2">☰</button>
+    <button id="hamburger" aria-label="Menu" tabindex="1">☰</button>
     <main id="maincontent">
-        <div class="hero">
-            <div class="hero__inner">
-                <h1 class="hero__title">Find Any Food & Beverages Restaurant</h1>
-                <p class="hero__tagline">The Best Restaurant For You</p>
-            </div>
-        </div>
-        <section class="content">
-            <div class="catalouge">
-                <h1 class="catalouge__label">Restaurant Catalouge</h1>
-                <post-list></post-list>
-            </div>
-        </section>
+
     </main>
 
     <footer>
